--- a/jamie.htm
+++ b/jamie.htm
@@ -30,7 +30,7 @@ img {
 	</head>
 	<body>
 		<img src = "jamie2.png" style = "width:1535.2px;height:864px;">
-		<a href = "homepage.htm">
+		<a href = "index.html">
 		<img class = "arrow" src = "arrow.png" style = "width:397px;height:561px;">	
 		</a>	
 	</body>
